added translation for projectile motion

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom ">
-                <a href="projects/platonic-solids.html">
+                <a href="javascript: TRANSLATION.redirect('projects/platonic-solids.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="platonic-solids" class="project-title w3-display-topleft w3-padding">Platonic Solids
                         </div>
@@ -50,7 +50,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/solar-system.html">
+                <a href="javascript: TRANSLATION.redirect('projects/solar-system.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="solar-system" class="project-title w3-display-topleft w3-padding">Solar System</div>
                         <img src="img/projects-main-images/solar-system.png" alt="Solar System logo"
