--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -382,7 +382,7 @@
         TRANSLATION.add(
             '#warning-fiducial',
             `You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png" target="_blank">click here</a> to download).`,
-            `É necessário imprimir o marcador fiduciário para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">Clique aqui</a> par baixar).`
+            `É necessário imprimir o marcador fiduciário para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">Clique aqui</a> para baixar).`
         );
 
         TRANSLATION.add(
