--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -241,7 +241,7 @@
         TRANSLATION.add(
             '#warning-fiducial',
             `You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png" target="_blank">click here</a> to download).`,
-            `É nescessário imprimir o marcador fiduciário para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">
+            `É necessário imprimir o marcador fiducial para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">
                 Clique aqui</a> par baixar).`
         );
 
