--- a/projects/historical-figures.html
+++ b/projects/historical-figures.html
@@ -2,53 +2,55 @@
 <html>
 
 <head>
-    <title>Historical Figures</title>
+    <title id="title">Historical Figures</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/w3.css">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/translation.js"></script>
+    <script src="../components/navbar.js"></script>
 </head>
 
 <body>
-
     <!-- Navbar (sit on top) -->
-    <div class="w3-top ">
-        <div class="w3-bar w3-white w3-wide w3-padding w3-card ">
-            <a href="../index.html#home " class="w3-bar-item w3-button "><b>VR</b> Tools</a>
-            <!-- Float links to the right. Hide them on small screens -->
-            <div class="w3-right w3-hide-small ">
-                <a href="../index.html#vr-apps" class="w3-bar-item w3-button">VR Apps</a>
-                <a href="../index.html#projects" class="w3-bar-item w3-button">Projects</a>
-                <a href="../index.html#about " class="w3-bar-item w3-button ">About</a>
-                <a href="../index.html#contact " class="w3-bar-item w3-button ">Contact</a>
-            </div>
-        </div>
-    </div>
+    <navbar-component></navbar-component>
 
     <!-- Page content -->
     <div class="w3-content w3-padding " style="max-width:1564px ">
 
         <div class="w3-container w3-padding-32 " id="projects">
-            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Historical Figures</h1>
+            <h1 id="header" class="w3-padding-16 w3-border-bottom w3-border-light-grey">Historical Figures</h1>
         </div>
 
         <div class="w3-container" id="about" style="text-align:justify;">
-            <p>
-                Its important to study history and knows what happenned on the past. There are many people that marked the society,  for evil with wars, battles and conflicts or contribute to progress fo the science or the organization aspect of society. So on the next application has a book of historical figures and do you have to fill the book with the picture that corresponds the information text present on the pages.
+            <p id="p1">
+                Study history is important to knows what happened on the past, to know personalites that marked the epochs, wars, 
+                differents cultures and the pogress of the society. So, this application present a a book of historical figures and you 
+                need to fill the book with the picture that correspond the information text present on the pages.
             </p>
 
         </div>
 
         <div class="w3-container w3-row w3-mobile" style="text-align:center;">
             <!-- workaround to center iframe -->
-            <div class="w3-col m2 l2 w3-hide-small">
-                <p></p>
-            </div>
-
+            
             <iframe id="scene" class="w3-col l8" src="./src/historical-figures-application.html" height="400"
-                style="border:2px solid black;"></iframe>
+                style="border:2px solid black;">
+            </iframe>
+
 
             <script>
+                /*function translationApplication(){
+                    var language = location.search;
+                    if(language.length != 0){
+                        let aux = "?lang=";
+                        document.getElementById("scene").src = "./src/historical-figures-application.html"  + location.search; 
+                    }
+                }
+                window.onload = function(){
+                    translationApplication();
+                }*/
+
                 // iOS iframe auto-resize workaround
 
                 if (/(iPad|iPhone|iPod)/g.test(navigator.userAgent)) {
@@ -65,9 +67,8 @@
 
         <!-- More modes -->
         <div class="w3-container w3-padding-32 ">
-            <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
+            <h3 id="more-modes-header" class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
         </div>
-
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/historical-figures-application.html" target="_blank" style="text-decoration: none;">
@@ -75,7 +76,8 @@
                         style="background: url('img/Historical-Figures/blur.png') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                            <br />Fullscreen
+                            <br />
+                            <div id="fullscreen">Fullscreen</div>
                         </div>
                     </div>
                 </a>
@@ -119,149 +121,141 @@
             </div>
             -->
         </div>
-        <!-- End of more modes-->
 
+        <!-- End of more modes-->
         <div class="w3-container w3-padding-32 ">
-            <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Images in Augmented Reality</h3>
+            <h3 id="images-header" class="w3-padding-16 w3-border-bottom w3-border-light-grey ">
+                Images in Augmented and Virtual Reality
+            </h3>
         </div>
-        <!-- 
+
+        <!--
         <div class="w3-content w3-display-container w3-center w3-row ">
-            <img class="slide" src="./img/Solar-System/screenshot1-AR.jpeg" style="border:1px solid black"
-                onclick="openModal(1)">
-            <img class="slide" src="./img/Solar-System/screenshot2-AR.jpeg" style="border:1px solid black"
-                onclick="openModal(2)">
-            <img class="slide" src="./img/Solar-System/screenshot3-AR.jpeg" style="border:1px solid black"
-                onclick="openModal(3)">
-            <img class="slide" src="./img/Solar-System/screenshot4-AR.jpeg" style="border:1px solid black"
-                onclick="openModal(4)">
-            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
-                onclick="plusDivs(-1) ">&#10094;</button>
+
+            <img class="slide " src="./img/Architecture/screenshot1-AR.jpg" onclick="openModal(1)">
+            <img class="slide " src="./img/Architecture/screenshot2-AR.jpg" onclick="openModal(2)">
+            <img class="slide " src="./img/Architecture/example-VR.jpg" onclick="openModal(3)">
+
+            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">
+                &#10094;
+            </button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
         </div>
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot1-AR.jpeg"
-                    style="height: 100%; border:1px solid black">
+                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot1-AR.jpg"
+                    style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot2-AR.jpg"
+                    style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Architecture/example-VR.jpg"
+                    style="height: 100%;">
 
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot2-AR.jpeg"
-                    style="height: 100%; border:1px solid black">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot3-AR.jpeg"
-                    style="height: 100%; border:1px solid black">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot4-AR.jpeg"
-                    style="height: 100%; border:1px solid black">
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
             </div>
 
             <span
                 class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
-                onclick="closeModal(0)" style="cursor:pointer">×</span>
+                onclick="closeModal()" style="cursor:pointer">×</span>
         </div>
         -->
 
-        <div class="w3-container w3-padding-32 ">
-            <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Images in Virtual Reality</h3>
-        </div>
-        <!--
-        <div class="w3-content w3-display-container w3-center w3-row">
-            <img class="slide2" src="./img/Solar-System/screenshot5-VR.png"
-                style="width: 90%; height: auto; border:1px solid black" onclick="openModal2(1)">
-            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
-                onclick="plusDivs2(-1) ">&#10094;</button>
-            <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs2(1) ">&#10095;</button>
-        </div>
-
-        <div id="modal-slideshow-2" class="w3-modal w3-black">
-            <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot5-VR.png"
-                    style="height: 100%; border:1px solid black">
-                <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal2(-1)">❮</span>
-                <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal2(1)">❯</span>
-            </div>
-
-            <span
-                class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
-                onclick="closeModal2()" style="cursor:pointer">×</span>
-        </div>
-        -->
-
-        <div class="w3-panel w3-leftbar w3-serif">
-            <h5><b>Reference:</b></h5>
-            <p><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque repellat sequi temporibus nam reiciendis totam at ipsa voluptatem. Eum quia provident earum sed architecto quasi ducimus impedit perferendis minus dolore!</i></p>
-            <p><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sed fugiat dolor ab. Officia architecto autem illo odit at nobis vero voluptas dignissimos est blanditiis, amet eligendi quae? Velit, hic?</i></p>
-            <p><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex consequatur aliquid, vitae sapiente ad nulla inventore dolore quibusdam rem temporibus ab nostrum quia, dolores perferendis sunt? Eveniet corrupti accusantium odio.</i></p>
-        </div>
-
-        <!-- End page content -->
+    <div class="w3-panel w3-leftbar w3-serif">
+        <h5><b>Reference:</b></h5>
+        <p><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque repellat sequi temporibus nam reiciendis totam at ipsa voluptatem. Eum quia provident earum sed architecto quasi ducimus impedit perferendis minus dolore!</i></p>
+        <p><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sed fugiat dolor ab. Officia architecto autem illo odit at nobis vero voluptas dignissimos est blanditiis, amet eligendi quae? Velit, hic?</i></p>
+        <p><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex consequatur aliquid, vitae sapiente ad nulla inventore dolore quibusdam rem temporibus ab nostrum quia, dolores perferendis sunt? Eveniet corrupti accusantium odio.</i></p>
     </div>
 
+    <!-- End page content -->
+    
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-16 ">
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS" target="_blank "
                 class="w3-hover-text-green ">w3.css</a></p>
     </footer>
-    <script type="text/javascript" src="../js/script.js"></script>
     <script type="text/javascript">
+        TRANSLATION.add(
+            '#header',
+            'Historical Figures',
+            'Figuras Históricas'
+        );
 
-        // To VR -- MODAL IMAGES
+        TRANSLATION.add(
+            '#p1',
+            `Study history is important to knows what happened on the past, to know personalites that marked the epochs, wars, 
+            differents cultures and the pogress of the society. So, this application present a a book of historical figures and 
+            you can to fill the book with the picture that correspond the information text present on the pages to test your knowledge 
+            of historical personalitys.`,
 
-        var slideIndex_02 = 1;
+            `Estudar história é importante para saber o que aconteceu no passado, conhecer personalidades que marcaram épocas, 
+            guerras, diferentes culturas e o progresso da sociedade. Portanto, este aplicativo apresenta um livro de figuras 
+            históricas e você pode preencher o livro com a imagem que corresponde ao texto informativo presente nas páginas 
+            para testar seu conhecimento de personalidades históricas.`
+        );
 
-        window.addEventListener('resize', () => {
-            showDivs(slideIndex);
-            showDivs2(slideIndex_02);
-        })
+        TRANSLATION.add(
+            '#fullscreen',
+            'Fullscreen',
+            'Tela cheia'
+        );
 
-        showDivs2(slideIndex_02);
+        TRANSLATION.add(
+            '#ar',
+            'Augmented Reality',
+            'Realidade Aumentada',
+        );
 
-        function plusDivs2(n) {
-            showDivs2(slideIndex_02 += n);
-        }
+        TRANSLATION.add(
+            '#vr',
+            'Virtual Reality',
+            'Realidade Virtual'
+        );
 
-        function showDivs2(n) {
-            const slide2 = document.getElementsByClassName("slide2");
-            const display2 = window.innerWidth < 1024 ? 'none' : "inline-block";
+        TRANSLATION.add(
+            '#warning-fiducial',
+            `You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png" target="_blank">click here</a> to download).`,
+            `É necessário imprimir o marcador fiducial para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">
+                Clique aqui</a> par baixar).`
+        );
 
-            if (n > slide2.length) {
-                slideIndex_02 = 1;
-            }
-            if (n < 1) {
-                slideIndex_02 = slide2.length;
-            }
-            for (let i = 0; i < slide2.length; i++) {
-                slide2[i].style.display = display2;
-            }
-            slide2[slideIndex_02 - 1].style.display = "inline-block";
-        }
+        TRANSLATION.add(
+            '#warning-hmd-1',
+            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one joystick even though it is possible to use the
+                app without those equipments.`,
+            `Para uma experiência completa no modo RV, é nescessário um HMD (head-mounted display, ou capacete de visualização em português) e um controle
+                joystick, apesar de ser possível usar o aplicativo sem esses equipamentos.`
+        )
 
-        function openModal2(n) {
-            document.getElementById("modal-slideshow-2").style.display = "block";
-            showModal2(slideIndex_02 = n);
-        }
+        TRANSLATION.add(
+            '#warning-hmd-2',
+            `Using mobile devices, press the VR button in bottom right conner before inserting your device in the
+                HMD. A circle will move as you look around and you can teleport to that circle pressing any joystick
+                button. Alternatively, it is also possible to teleport pressisng the spacebar or touching the screen
+                if your device is sensitive to touch.`,
+            `Quando usando um dispositivo móvel, aperte o botão "VR" no canto inferior direito da tela antes de inserir seu dispositivo no HMD.
+                Um círculo irá aparecer no chão quando pressionar algum botão do controle joystick e você irá ser teleportado para o círculo ao soltar o botão.
+                Alternativamente, também é possível se teleportar pressionado a barra de espaço caso esteja usando teclado, tocando na tela se seu dispositivo
+                for sensível ao toque.`
+        );
 
-        function closeModal2() {
-            document.getElementById("modal-slideshow-2").style.display = "none";
-        }
+        TRANSLATION.add(
+            '#more-modes-header',
+            'More modes',
+            'Mais modos'
+        );
+        TRANSLATION.add(
+            '#images-header',
+            'Images in Augmented and Virtual Reality',
+            'Imagens em Realidade Virtual e Aumentada'
+        );
 
-        function plusModal2(n) {
-            showModal2(slideIndex_02 += n);
-        }
-
-        function showModal2(n) {
-            const slide2 = document.getElementsByClassName("slide-modal-2");
-
-            if (n > slide2.length) {
-                slideIndex_02 = 1;
-            }
-            if (n < 1) {
-                slideIndex_02 = slide2.length;
-            }
-            for (let i = 0; i < slide2.length; i++) {
-                slide2[i].style.display = "none";
-            }
-            slide2[slideIndex_02 - 1].style.display = "block";
-        }
+        TRANSLATION.add(
+            '#title',
+            'Historical Figures',
+            'Figuras Históricas'
+        );
     </script>
 </body>
 
