--- a/projects/src/historical-figures-application.html
+++ b/projects/src/historical-figures-application.html
@@ -21,7 +21,7 @@
     <script type="text/javascript">
         var language = location.search;
         if(language.length != 0){
-            let aux = "?language=";
+            let aux = "?lang=";
             language = language.substring(aux.length, language.length);
             switch(language){
                 case "en-US":            
