Inclined Plane translation the page to pt-BR

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/historical-figures.html">
+                <a href="javascript: TRANSLATION.redirect('projects/historical-figures.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="historical-figures" class="project-title w3-display-topleft w3-padding">Historical
                             Figures</div>
