--- a/projects/src/inclined-plane-application-VR.html
+++ b/projects/src/inclined-plane-application-VR.html
@@ -134,8 +134,7 @@
 
                     rig.setAttribute('position', cameraPos);
                     rig.setAttribute('rotation', { x: 0, y: rotation - (camera.rotation.y * 180 / Math.PI), z: 0 });
-
-                    this.vrInterface.updatePostion({ theta: rotation });
+                    this.vrInterface.updatePosition({ theta: rotation });
                 });
 
                 this.vrInterface.addButton('increaseFriction', '#increaseFriction', () => {
@@ -358,11 +357,13 @@
 
         <a-entity id="rig" position="5 3.4 5" rotation="0 0 0">
             <a-entity id="camera" camera position="0 1.6 0" look-controls="pointerLockEnabled: true"
-                wasd-controls="acceleration:500; fly: true; enabled: false">
+                wasd-controls="acceleration:500; fly: true; enabled: true">
             </a-entity>
         </a-entity>
 
-        <a-entity vr-interface="dimension: 3 2; theta: 135; transparency: true; gap: 0.01 0.01; border: 1 #6d7584;" app>
+        <a-entity
+            vr-interface="dimension: 3 2; theta: 135; transparency: true; gap: 0.01 0.01; border: 1 #6d7584; messageSize: 1.3; sideTextSize: 0.75 0.6; sideTextRotation: -30; bgTransparency: false;"
+            app>
         </a-entity>
 
     </a-scene>
