fixed pt-br virtual travel version

--- a/projects/virtual-travel.html
+++ b/projects/virtual-travel.html
@@ -77,7 +77,7 @@
         <h5 id="credit"><b>Images credit:</b></h5>
         <p>
             <i>
-                <h5 id="p2">Used images from the websites:</h5>
+                Used images from the websites:
                 https://pixexid.com/search/360%20panorama and https://unsplash.com/s/photos/360-panorama.
             </i>
         </p>
@@ -124,11 +124,6 @@
             'Crédito das Imagens:'
         );
 
-        TRANSLATION.add(
-            '#p2',
-            'Used images from the websites:',
-            'Imagens utilizadas dos sites:'
-        );
 
         TRANSLATION.add(
             '#title',
