--- a/projects/src/virtual-travel-application.html
+++ b/projects/src/virtual-travel-application.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Virtual Travel</title>
@@ -16,7 +17,7 @@
                 let string = '\nPLACE: San Francisco, California United States of America.\n';
                 string += '\nFort Point is a masonry seacoast fortification \nlocated on the southern side of the Golden Gate at\n the entrance to San Francisco Bay.';
                 string += '\nIt is also the geographic name of the promontory \nupon which the fort and the southern approach of\n the Golden Gate Bridge were constructed.\n\n';
-             
+
                 vrInterface.showSideText(string);
 
                 vrInterface.addButton('fort', '#fort', () => {
@@ -106,6 +107,7 @@
     </script>
 
 </head>
+
 <body>
     <a-scene>
         <a-assets>
@@ -137,18 +139,20 @@
 
         <a-sky src="#fort-point" rotation="0 -100 0" id="place"></a-sky>
 
-                 config button-controls>
+        config button-controls>
         </a-entity>
 
-        <a-entity vr-interface="dimension: 4 2; orbits: 1 1.5 2; theta: 90; rho: 0 ; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584; messageColor: yellow; messageSize: 1.2; sideTextSize: 0.88 1.3; sideTextRotation: -40"
-                   config button-controls>
+        <a-entity
+            vr-interface="dimension: 4 2; orbits: 1 1.5 2; theta: 90; rho: 0 ; transparency: true; gap: 0.01 0.01; border: 1.2 #6d7584; messageColor: yellow; messageSize: 1.2; sideTextSize: 0.88 1.3; sideTextRotation: -40; bgTransparency: false;"
+            config button-controls>
         </a-entity>
 
         <a-entity id="rig" position="0 0 0" rotation="0 0 0">
             <a-entity id="camera" camera position="0 1.6 0" look-controls="pointerLockEnabled: true"
-                      wasd-controls="acceleration:150; fly: true; enabled: false">
+                wasd-controls="acceleration:150; fly: true; enabled: false">
             </a-entity>
             </entity>
     </a-scene>
 </body>
+
 </html>
