(Historical Figures) added references to images

--- a/projects/historical-figures.html
+++ b/projects/historical-figures.html
@@ -155,9 +155,19 @@
 
     <div class="w3-panel w3-leftbar w3-serif">
         <h5><b>Reference:</b></h5>
-        <p><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque repellat sequi temporibus nam reiciendis totam at ipsa voluptatem. Eum quia provident earum sed architecto quasi ducimus impedit perferendis minus dolore!</i></p>
-        <p><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sed fugiat dolor ab. Officia architecto autem illo odit at nobis vero voluptas dignissimos est blanditiis, amet eligendi quae? Velit, hic?</i></p>
-        <p><i>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex consequatur aliquid, vitae sapiente ad nulla inventore dolore quibusdam rem temporibus ab nostrum quia, dolores perferendis sunt? Eveniet corrupti accusantium odio.</i></p>
+        <p>
+        <i>
+            "Museum". Disponível em:〈 <a href="http://www.samrohn.com/360-panorama/frick-collection-nyc-360-tour/">http://www.samrohn.com/360-panorama/frick-collection-nyc-360-tour/</a> 〉<br>
+            "Adolf Hitler". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Adolf_Hitler_cropped_restored.jpg">https://commons.wikimedia.org/wiki/File:Adolf_Hitler_cropped_restored.jpg</a> 〉<br>
+            "Alan Turing". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Alan_Turing_Aged_16.jpg">https://commons.wikimedia.org/wiki/File:Alan_Turing_Aged_16.jpg</a> 〉<br>
+            "Albert Einstein". Disponível em:〈 <a href="https://search.creativecommons.org/photos/ba6f5320-95d7-4727-9989-1faadae4f249">https://search.creativecommons.org/photos/ba6f5320-95d7-4727-9989-1faadae4f249</a> 〉<br>
+            "Benjamin Franklin". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Benjamin_Franklin_by_Joseph_Siffrein_Duplessis.jpg">https://commons.wikimedia.org/wiki/File:Benjamin_Franklin_by_Joseph_Siffrein_Duplessis.jpg</a> 〉<br>
+            "Isaac Newton". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:GodfreyKneller-IsaacNewton-1689.jpg">https://commons.wikimedia.org/wiki/File:GodfreyKneller-IsaacNewton-1689.jpg</a> 〉<br>
+            "Marie Curie". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Marie_Curie_c1920.png">https://commons.wikimedia.org/wiki/File:Marie_Curie_c1920.png</a> 〉<br>
+            "Martin Luther King Jr.". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Martin_Luther_King_Jr_NYWTS_6.jpg">https://commons.wikimedia.org/wiki/File:Martin_Luther_King_Jr_NYWTS_6.jpg</a> 〉<br>
+            "Napoleão Bonaparte". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Napoleon_cropFXD.jpg">https://commons.wikimedia.org/wiki/File:Napoleon_cropFXD.jpg</a> 〉<br>
+            "Winston Churchill". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Sir_Winston_Churchill_-_19086236948.jpg">https://commons.wikimedia.org/wiki/File:Sir_Winston_Churchill_-_19086236948.jpg</a> 〉<br>
+        </i></p>
     </div>
 
     <!-- End page content -->
